<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353839"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:ellipsize="start"
        android:gravity="end|center"
        android:singleLine="true"
        android:focusableInTouchMode="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:ellipsize="start"
        android:gravity="end|center"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInput" />


    <androidx.slidingpanelayout.widget.SlidingPaneLayout
        android:id="@+id/sliding_pane_layout"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#292929"
            android:orientation="horizontal">


            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="266dp"
                android:layout_height="match_parent"
                android:background="#292929">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:backgroundTint="@color/black_500"
                        android:text="@string/_7"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button8"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_8"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button9"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_9"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="100dp">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_4"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_5"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_6"
                        android:textColor="@color/white" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="100dp">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_1"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_2"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_3"
                        android:textColor="@color/white" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="129dp">

                    <Button
                        android:id="@+id/button0"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_0"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/buttonComma"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/_coma"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/buttonEqual"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:background="@drawable/buttoncircle"
                        android:text="@string/equal"
                        android:textColor="@color/white" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/buttonClear"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/buttoncircle"
                    android:paddingLeft="10dp"
                    app:srcCompat="@android:drawable/ic_input_delete" />

                <Button
                    android:id="@+id/buttonDivide"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/buttoncircle"
                    android:paddingLeft="10dp"
                    android:text="@string/divide"
                    android:textColor="#51D6FF" />

                <Button
                    android:id="@+id/buttonMultiply"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/buttoncircle"
                    android:paddingLeft="10dp"
                    android:text="@string/mult"
                    android:textColor="#51D6FF" />

                <Button
                    android:id="@+id/buttonSubtract"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/buttoncircle"
                    android:paddingLeft="10dp"
                    android:text="@string/minus"
                    android:textColor="#51D6FF" />

                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/buttoncircle"
                    android:paddingLeft="10dp"
                    android:text="@string/plus"
                    android:textColor="#51D6FF" />

            </LinearLayout>

        </LinearLayout>

        <TableLayout
            android:id="@+id/tableScientific"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="30dp"
            android:background="@color/blue_200">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonInv"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/inv" />

                <ToggleButton
                    android:id="@+id/buttonDeg"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:background="@drawable/buttoncircle"
                    android:text="@string/deg"
                    android:textColor="@color/white"
                    android:textOff="@string/rad"
                    android:textOn="@string/deg" />

                <Button
                    android:id="@+id/buttonRemainder"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/mod" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonSin"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/sin" />

                <Button
                    android:id="@+id/buttonCos"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/cos" />

                <Button
                    android:id="@+id/buttonTan"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/tan" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonLn"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/ln" />

                <Button
                    android:id="@+id/buttonLog"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/log" />

                <Button
                    android:id="@+id/buttonSqrt"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/root" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonPi"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/Pi" />

                <Button
                    android:id="@+id/buttonExp"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/exp" />

                <Button
                    android:id="@+id/buttonPower"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/power" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/buttonLeftBrace"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/leftBrace" />

                <Button
                    android:id="@+id/buttonRightBrace"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/rightBrace" />

                <Button
                    android:id="@+id/buttonFact"
                    style="@style/ScientificButton"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/fact" />

            </TableRow>
        </TableLayout>

    </androidx.slidingpanelayout.widget.SlidingPaneLayout>

</androidx.constraintlayout.widget.ConstraintLayout>